chore: some code lint